@@ -1,101 +1,100 @@
-buildscript {
-    repositories { 
-        mavenLocal() 
-        mavenCentral()
-        jcenter()
-    }
-    
-    dependencies {
-        classpath 'net.researchgate:gradle-release:2.6.0'
-    }
-}
-
+/*
+ * Copyright 2021 Karlsruhe Institute of Technology.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 plugins { 
-    id 'io.franzbecker.gradle-lombok' version '1.14'
+    id "io.freefair.lombok" version "6.1.0"
+    id "io.freefair.maven-publish-java" version "6.1.0"
     id "io.spring.dependency-management" version "1.0.7.RELEASE" 
     id "com.github.kt3k.coveralls" version "2.8.1" 
     id "org.owasp.dependencycheck" version "3.1.2"
     id "org.ajoberstar.grgit" version "2.0.1"
     id "com.jfrog.bintray" version "1.7.3"
+    id "java"
+    id "jacoco"
 }
 
-ext { springBootVersion = '2.2.2.RELEASE' }
+ext { 
+    springBootVersion = '2.4.10' 
+    springDocVersion  = '1.5.6'
+}
 
-apply plugin: 'java-library'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-apply plugin: 'jacoco'
-
-description = """Base service module containing entities, interfaces and helpers."""
+description = "Base service module containing entities, interfaces and helpers."
+group = "edu.kit.datamanager"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 jar {
-    baseName = 'service-base'
+    archivesBaseName = 'service-base'
 }
 
-group = "edu.kit.datamanager"
+println "Building ${name} version: ${version}"
+println "Running gradle version: $gradle.gradleVersion"
+println "JDK version: ${JavaVersion.current()}"
 
 repositories {
     mavenLocal()   
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
-    api("org.springframework.boot:spring-boot-starter-amqp")
-    api("org.springframework.boot:spring-boot-starter-web")
-    api("org.springframework.boot:spring-boot-starter-security")
-    api("org.springframework.boot:spring-boot-starter-actuator")
-    api("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation "org.springframework.boot:spring-boot-starter-amqp"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
-    api("org.springdoc:springdoc-openapi-ui:1.2.31")
-    api("org.springdoc:springdoc-openapi-data-rest:1.2.31")
-    api("org.springdoc:springdoc-openapi-webmvc-core:1.2.31")
+    implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-data-rest:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-webmvc-core:${springDocVersion}"
 
-    api("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.1")
-    api("com.fasterxml.jackson.module:jackson-module-afterburner:2.7.1")
-    api("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5")
-    api("com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.0")
+    implementation "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.1"
+    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.7.1"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.0"
    
-    api("net.sf.dozer:dozer:5.5.1")
+    implementation "net.sf.dozer:dozer:5.5.1"
 
-    api("io.jsonwebtoken:jjwt:0.9.1")
+    implementation "io.jsonwebtoken:jjwt:0.9.1"
 
-    api("com.github.fge:json-patch:1.9")
+    implementation "com.github.fge:json-patch:1.9"
    
-    api("org.apache.commons:commons-lang3:3.6")
-    api("commons-validator:commons-validator:1.6")
-    api("commons-io:commons-io:2.5")
-    api('org.apache.httpcomponents:httpclient:4.5.6')
-    api('commons-codec:commons-codec:1.7')
-    api('org.javers:javers-spring-boot-starter-sql:5.8.8')
-    //compile("dnsjava:dnsjava:2.1.8")
+    implementation "org.apache.commons:commons-lang3:3.12.0"
+    implementation "commons-validator:commons-validator:1.7"
+    implementation "commons-io:commons-io:2.11.0"
+    // http client uses commons-codec
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
      
-    api("org.apache.commons:commons-collections4:4.1")
+    implementation "org.apache.commons:commons-collections4:4.4"
    
-    api("org.slf4j:slf4j-api:1.7.25")
-    api("ch.qos.logback:logback-classic:1.2.3")
+    implementation "org.slf4j:slf4j-api:1.7.32"
+    implementation "ch.qos.logback:logback-classic:1.2.5"
 
     //Java 11 Support 
-    compile('javax.xml.bind:jaxb-api:2.3.1')
-    compile('com.sun.xml.bind:jaxb-core:2.3.0.1')
-    compile('com.sun.xml.bind:jaxb-impl:2.3.0.1')
-    api('javax.activation:activation:1.1.1')
-    api('org.javassist:javassist:3.23.1-GA')
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.0.1'
+    implementation 'javax.activation:activation:1.1.1'
+    implementation 'org.javassist:javassist:3.28.0-GA'
    
     //test
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("junit:junit:4.12")
-    testImplementation("org.mockito:mockito-core:2.23.4")
-    testImplementation("org.powermock:powermock-module-junit4:2.0.2")
-    testImplementation("org.powermock:powermock-api-mockito2:2.0.2")
-}
-
-lombok {
-    version = '1.18.10'
-    sha256 = ""
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.mockito:mockito-core:3.12.0"
+    testImplementation "org.powermock:powermock-module-junit4:2.0.9"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
 }
 
 if (project.hasProperty('deploy')) {
@@ -104,42 +103,47 @@ if (project.hasProperty('deploy')) {
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 tasks.withType(Test) {
+    // Allow access to internal methods used by powerMockito
+    // Will fail with Java17
+    if (!JavaVersion.current().isJava8()) {
+        jvmArgs '--illegal-access=permit'
+    }
     testLogging {
         events 'started', 'passed'
     }
 }
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
     
     afterEvaluate {
         //exclude some classes/package from code coverage report
         classDirectories.setFrom(files(classDirectories.files.collect {
-                    fileTree(dir: it, exclude: [\
-                                //pure entity package currently not needed
-            'org/datacite/**', \
-                   'org/purl/**', \
-                            //performance tests
-            'edu/kit/datamanager/perf/**', \
-                            //remove AuthenticationHelper tests due to mocking -> code coverage cannot be determined
-                            //'edu/kit/datamanager/util/AuthenticationHelper*',
-                            //deprecated stuff
-            'edu/kit/datamanager/util/DCTransformationHelper*',
-                  'edu/kit/datamanager/dao/ByExampleSpecification*',
-                  'edu/kit/datamanager/controller/hateoas/**',
-                            //exceptions 
-            'edu/kit/datamanager/exceptions/**',
-                  'edu/kit/datamanager/service/impl/RabbitMQMessagingService*',
-                  'edu/kit/datamanager/configuration/**',
-                  'edu/kit/datamanager/service/IGenericService*'
-                        ])
-                }))
+            fileTree(dir: it, exclude: [\
+                //pure entity package currently not needed
+                'org/datacite/**', \
+                'org/purl/**', \
+                //performance tests
+                'edu/kit/datamanager/perf/**', \
+                //remove AuthenticationHelper tests due to mocking -> code coverage cannot be determined
+                //'edu/kit/datamanager/util/AuthenticationHelper*',
+                //deprecated stuff
+                'edu/kit/datamanager/util/DCTransformationHelper*',
+                'edu/kit/datamanager/dao/ByExampleSpecification*',
+                'edu/kit/datamanager/controller/hateoas/**',
+                //exceptions 
+                'edu/kit/datamanager/exceptions/**',
+                'edu/kit/datamanager/service/impl/RabbitMQMessagingService*',
+                'edu/kit/datamanager/configuration/**',
+                'edu/kit/datamanager/service/IGenericService*'
+            ])
+        }))
     }
 }
 
